Внесены правки с учетом ревью
