# bookstore-service/src/main/java/org/example/controller/payment/PaymentApiImpl.java
@@ -1,5 +1,6 @@
 package org.example.controller.payment;
 
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.example.api.PaymentApi;
 import org.example.model.*;
@@ -7,27 +8,28 @@ import org.example.model.CreateOrderRequest;
 import org.example.model.PaymentCardRequest;
 import org.example.model.PaymentCardResponse;
 import org.example.model.PaymentRequest;
-import org.example.model.PaymentResponse;
-import org.example.model.RefundPaymentRequest;
 import org.example.model.RefundResponse;
 import org.example.service.payment.PaymentApiInterface;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
+@Validated
 public class PaymentApiImpl implements PaymentApi {
 
     private final PaymentApiInterface paymentApiInterface;
 
     @Override
-    public ResponseEntity<PaymentCardResponse> addPaymentDetails(PaymentCardRequest paymentCardRequest) {//ввести карту
-        return ResponseEntity.ok(paymentApiInterface.addPaymentDetails(paymentCardRequest));
+    public ResponseEntity<PaymentCardResponse> saveCard(@RequestBody @Valid PaymentCardRequest paymentCardRequest) {
+        return ResponseEntity.ok(paymentApiInterface.saveCard(paymentCardRequest));
     }
 
     @Override
-    public ResponseEntity<CreateOrderResponse> createOrder(CreateOrderRequest createOrderRequest) {
-        return ResponseEntity.ok(paymentApiInterface.createOrder(createOrderRequest));
+    public ResponseEntity<CreateOrderResponse> createPayment(CreateOrderRequest createOrderRequest) {
+        return ResponseEntity.ok(paymentApiInterface.createPayment(createOrderRequest));
     }
 
     @Override
@@ -37,7 +39,7 @@ public class PaymentApiImpl implements PaymentApi {
 
 
     @Override
-    public ResponseEntity<RefundResponse> refundPayBooksById(Integer paymentId, RefundPaymentRequest refundPaymentRequest) {
-        return ResponseEntity.ok(paymentApiInterface.refundPayBooksById(paymentId, refundPaymentRequest));
+    public ResponseEntity<RefundResponse> refundPayBooksById(Integer paymentId) {
+        return ResponseEntity.ok(paymentApiInterface.refundPayBooksById(paymentId));
     }
 }
